# try-haskell

./: RESOURCES.md  about.html  archive.html  contact.html  index.html
css/: default.css
exercises/exercism/: README.md
exercises/h-99/: 01.hs  02.hs  03.hs  04.hs
posts/: 2017-07-13-hello-world.html  post_01.md
projects/albums/: albums.cabal
projects/albums/src/: Main.hs
projects/baseball/: README.md  baseball.cabal
projects/baseball/src/: Baseball.hs  Main.hs
projects/baseball/tests/: Tests.hs
projects/sms/: sms.cabal  stack.yaml
projects/sms/app/: Main.hs
projects/stack-project/: README.md
projects/stack-project/.stack-work/install/x86_64-osx/lts-8.22/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSstack-project-0.1.0.0-A7TZ5fp91Cf25GyJy0ptvt-ghc8.0.2.dylib
projects/stack-project/.stack-work/install/x86_64-osx/lts-8.22/8.0.2/pkgdb/: package.cache  stack-project-0.1.0.0-A7TZ5fp91Cf25GyJy0ptvt.conf
projects/static/: README.md  contact.markdown  index.html  static.cabal
projects/static/css/: default.css
projects/static/posts/: 2017-07-13-hello-world.markdown
projects/static/templates/: default.html
src/: area.hs  cipher.hs  factorial.hs  functions.hs  hello.hs  lazy.hs  learn.hs  letwhere.hs  pattern.hs  print.hs  quicksort.hs  recursion.hs  scratch.hs  squarepiify.hs  starman.hs  sum.hs  test.hs  triple.hs  waxon.hs  where.hs  wherein.hs
