name:                albums
version:             0.1.0.0
synopsis:            Albums REST backend.
homepage:            https://github.com/bijanbwb/try-haskell/projects/albums
license:             BSD3
license-file:        LICENSE
author:              Bijan
maintainer:          bijanbwb@gmail.com
copyright:           2017 Bijan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable albums
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , either
    , aeson >= 0.8
    , servant
    , servant-server
    , wai
    , warp
