name:                baseball
version:             0.1.0.0
synopsis:            CSV parser example.
description:         Baseball data analysis.
homepage:            https://github.com/bijanbwb/try-haskell/projects/baseball
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:         -Wall
  exposed-modules:     Baseball
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       vector,
                       cassava

executable baseball
  ghc-options:         -rtsopts -O2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       baseball,
                       bytestring,
                       cassava

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  default-language:    Haskell2010
  build-depends:       base,
                       baseball,
                       hspec

